docs: clarify hierarchy type descriptions for grid, tree, and grid-tree in PivotTable documentation

--- a/docs/assets/contributing/en/source-code-details/7.3-PivotTable-Code-Structure-and-Detail-Analysis.md
+++ b/docs/assets/contributing/en/source-code-details/7.3-PivotTable-Code-Structure-and-Detail-Analysis.md
@@ -13,15 +13,15 @@ A major feature of PivotTable is the tree-like `rowHeader` and `columnHeader`. U
 
 *  `rowHierarchyType / columnHierarchyType` : Tree display mode    
 
-*  grid    
+*  grid (supports row and column)        
 
 <img src='https://cdn.jsdelivr.net/gh/xuanhun/articles/visactor/sourcecode/img/FQABbDAB0o2vtKxp4Qjcc9DZnBf.gif' alt='' width='430' height='auto'>
 
-*  tree    
+*  tree (only supports row)    
 
 <img src='https://cdn.jsdelivr.net/gh/xuanhun/articles/visactor/sourcecode/img/Q1NsbNwRio0uEMxhFxYcu0mMnpe.gif' alt='' width='252' height='auto'>
 
-*  grid-tree (only supports row)    
+*  grid-tree (supports row and column)    
 
 <img src='https://cdn.jsdelivr.net/gh/xuanhun/articles/visactor/sourcecode/img/KiLTbkFzhoefrIxsbV3cI3hWngf.gif' alt='' width='516' height='auto'>
 
