docs: add contextmenu_canvas docs in VTable.md

--- a/docs/assets/contributing/en/source-code-details/4.1-VTable-Event-Design.md
+++ b/docs/assets/contributing/en/source-code-details/4.1-VTable-Event-Design.md
@@ -80,6 +80,8 @@ Custom Events: Unlike native browser events, they are only triggered in specific
 
 *  CONTEXTMENU_CELL    
 
+*  CONTEXTMENU_CANVAS
+
 *  DRAG_SELECT_END    
 
 ## Event System Design
