--- a/docs/assets/contributing/en/source-code-details/4.3-Built-in-Event-Definition-and-Implementation.md
+++ b/docs/assets/contributing/en/source-code-details/4.3-Built-in-Event-Definition-and-Implementation.md
@@ -62,7 +62,9 @@ Inside the VTable, more than 50 built-in events are provided, introduced below a
 
 * COPY_DATA *Cell content copy event*    
 
-* CONTEXTMENU_CELL *Cell right-click event*    
+* CONTEXTMENU_CELL *Cell right-click event*  
+
+* CONTEXTMENU_CANVAS *Canvas right-click event*  
 
 * Keyboard related events    
 
@@ -313,6 +315,8 @@ Most of the built-in event registrations in VTable are completed in the `EventMa
 *  DROPDOWN_MENU_CLEAR    
 
 *  CONTEXTMENU_CELL    
+
+*  CONTEXTMENU_CANVAS    
 
 *  EditManager    
 
