--- a/docs/assets/contributing/zh/source-code-details/4.1-VTable-Event-Design.md
+++ b/docs/assets/contributing/zh/source-code-details/4.1-VTable-Event-Design.md
@@ -75,7 +75,9 @@ VTable 中同时监听了 自定义事件 和 浏览器原生事件
 
 *  SELECTED_CELL    
 
-*  CONTEXTMENU_CELL    
+*  CONTEXTMENU_CELL
+
+*  CONTEXTMENU_CANVAS
 
 *  DRAG_SELECT_END    
 
